Add config option for 1MByte flash
Signed-off-by: Paul Brook <paul.brook@cocoon.life>

--- a/components/esp8266/Makefile.projbuild
+++ b/components/esp8266/Makefile.projbuild
@@ -2,6 +2,10 @@ BOOTLOADER_FIRMWARE_DIR := $(abspath $(COMPONENT_PATH))/firmware
 
 ESPTOOLPY_FLASHSIZE ?= $(CONFIG_ESPTOOLPY_FLASHSIZE)
 
+ifeq ($(ESPTOOLPY_FLASHSIZE), "1MB")
+ESP_INIT_DATA_DEFAULT_BIN_OFFSET := 0x0FC000
+endif
+
 ifeq ($(ESPTOOLPY_FLASHSIZE), "2MB-c1")
 ESP_INIT_DATA_DEFAULT_BIN_OFFSET := 0x1FC000
 endif
